public/stylesheets/main.css
@import url("appraisal.css");

.navbar-nav {
     float: none;
     margin: 0 auto;
     display: block;
     text-align: center;
 }

@media (min-width: 992px) {
    .navbar-nav > li {
        display: inline-block;
        float: none;
        padding-left: 2em;
        padding-right: 2em;
        margin-left: 1em;
        margin-right: 1em;
    }
}

.navbar-expand {
    float: none;
    margin: 0 auto;
    display: block;
    text-align: center;
}

@media (min-width: 992px) {
    .navbar-expand > li {
        display: inline-block;
        float: none;
        padding-left: 2em;
        padding-right: 2em;
        margin-left: 1em;
        margin-right: 1em;
    }
}

.navbar-expand {
    float: none;
    margin: 0 auto;
    display: block;
    text-align: center;
}

@media (min-width: 992px) {
    .navbar-expand > li {
        display: inline-block;
        float: none;
        padding-left: 2em;
        padding-right: 2em;
        margin-left: 1em;
        margin-right: 1em;
    }
}

.navbar-brand {float:none;}

ol, ul, dl {
    width: 100%;
}

.large-icon {
    font-size: 14em;
    color: #CCC;
    transform: rotate(20deg);
}

